# OmniAuth

./: .gitignore  2.0.md  LICENSE  LICENSE-PROPRIETARY  README.md  TESTING.md  docker-compose.yml  project_backlog.md
.github/workflows/: ci.yml
oss/client-mobile/: app.json  package-lock.json  package.json  tsconfig.json
oss/client-mobile/android/src/main/java/expo/modules/omniauth/: OmniAuthModule.kt
oss/client-mobile/ios/: OmniAuthModule.swift
oss/client-mobile/src/: App.tsx
oss/client-mobile/src/screens/: RegistrationScreen.tsx
oss/client-mobile/src/services/: CryptoService.ts
oss/client-mobile/src/services/__tests__/: CryptoService.test.ts
oss/crypto-core/: Cargo.toml  build.rs  cargo.toml  interop.txt
oss/crypto-core/src/: lib.rs  omni_auth.udl
oss/crypto-core/src/zk/: circuits.rs  interop.rs  mod.rs  prover.rs  verifier.rs
proprietary/backend/: go.mod  go.sum  interop_vectors.json  zk_interop_vectors.json
proprietary/backend/cmd/server/: main.go  main_test.go
proprietary/backend/cmd/worker/: main.go
proprietary/backend/db/: schema.sql
proprietary/backend/internal/crypto/: interop_test.go.disabled  replay_test.go  verifier.go  verifier_test.go
scripts/: init_omniauth.sh
