[package]
name = "omniauth_core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
# Post-Quantum Cryptography
pqcrypto-kyber = "0.8"
pqcrypto-dilithium = "0.5"
pqcrypto-traits = "0.3.5"
hkdf = "0.12"
sha2 = "0.10"

# Symmetric Encryption & Hashing
chacha20poly1305 = "0.10"
argon2 = { version = "0.5", features = ["std"] } # The standard for KEK derivation

# Utilities
rand = "0.8"
thiserror = "1.0"
uniffi = { version = "0.27", features = ["cli"] }
base64 = "0.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
zeroize = { version = "1.7", features = ["derive"] } # Memory wiping

# Zero-Knowledge Proofs (arkworks ecosystem)
ark-ff = "0.4"
ark-ec = "0.4"
ark-bn254 = "0.4"           # BN254 curve for Groth16 (Ethereum-compatible)
ark-groth16 = "0.4"
ark-snark = "0.4"
ark-relations = "0.4"
ark-r1cs-std = "0.4"
ark-serialize = { version = "0.4", features = ["derive"] }
ark-std = "0.4"

[build-dependencies]
uniffi = { version = "0.27", features = ["build"] }
